--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
 h1 {
     background: red
 }
+.paragraph-4 {
+    font-style: oblique;
+    font-size: 24px;
+    text-shadow: 2px 2px 4px green;
+    text-align: center;
+
+}
